**************************************
*** SquirrelMail Stable Series 1.4 ***
**************************************

Version 1.4.12 - SVN
--------------------
  - Enabled user selection of address format when adding from address
    book during message composition.
  - Fixed issue with adding attachments in PHP 4.x environments (#1805471).
  - Backport size setting on "newmail" popup window.

Version 1.4.11 - 29 September 2007
----------------------------------
  - Minimum PHP requirement raised from 4.0.6 to 4.1.0.
    SquirrelMail has been broken for a while with 4.0.x without anyone
    noticing, this move merely reflects reality.
  - Fix broken set_url_var function in functions/html.php (#1729814).
  - Fix config.pl not detecting auth support correctly (#1727033).
  - Fix display of X-Priority in message view.
  - Work around mailers sending broken Date headers with no space after the
    first comma.
  - Let POP3 class properly cope with lines starting with a '.'.
  - Some HTML validation cleanups.
  - Invalid year in sent_subfolders plugin (#1607380).
  - Always treat Content-Type case-insensitively (#1732092).
  - Fix typo: html/plain should be text/html.
  - Fix en/decode header swith in MDN (#1694687).
  - Fix compatibility with Windows path in administrator plugin (#1740469).
  - Fix disabling password encryption in mail_fetch (#1738001).
  - Fix busy loop and notice when two literals in IMAP fetch (#1739433).
  - Backported code for site wide SMTP authentication (#1531889).
  - Fixed issue with compose session not being cleaned after message is 
    saved or sent.
  - Added ability to detect HTTP_X_FORWARDED_PROTO in get_location(),
    thanks to Daniel Watts
  - Fix test for signout.php in the logged in check in is_logged_in() so it
    cannot be circumvented by manipulating the URL. External plugins might
    rely on this function guaranteeing that the user is logged in.
  - Use attachment_dir only at the point where we're actually